Bundle summary method
