# controllers/Users.js
@@ -206,33 +206,28 @@ module.exports.testAdmin = function testAdmin(req, res, next) {
  * Return total number of package variations.
  * @public
  */
-module.exports.summaryArch = function summaryArch(req, res, next) {
+module.exports.summaryByWhat = function summaryByWhat(req, res, next, bywhat) {
 
     eventEmitter.emit('apihit', req);
 
-    PackagesService.summaryArch()
+    switch(bywhat) {
+      case 'arch':
+        PackagesService.summaryArch()
         .then(function(payload) {
             utils.writeJson(res, payload, 200);
         })
         .catch(function(payload) {
             utils.writeJson(res, payload, 400);
         });
-};
-
-/**
- * @method
- * Return total number of package variations.
- * @public
- */
-module.exports.summaryFamily = function summaryFamily(req, res, next) {
-
-    eventEmitter.emit('apihit', req);
-
-    PackagesService.summaryFamily()
+        break;
+      case 'family':
+        PackagesService.summaryFamily()
         .then(function(payload) {
             utils.writeJson(res, payload, 200);
         })
         .catch(function(payload) {
             utils.writeJson(res, payload, 400);
         });
+        break;
+    } // switch
 };
